objects/copado__Static_Code_Analysis_Result__c.object
<CustomObject>
    <fields>
        <fullName>copado__Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Number_of_Violations__c</fullName>
        <description>Overall number of rule violations.</description>
        <label>Number of Violations</label>
        <summaryForeignKey>copado__Static_Code_Analysis_Violation__c.copado__Static_Code_Analysis_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>copado__Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org Credential</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Static Code Analysis Results</relationshipLabel>
        <relationshipName>Static_Code_Analysis_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Score_v11__c</fullName>
        <description>New v11 version of the Score field.</description>
        <label>Score</label>
        <summarizedField>copado__Static_Code_Analysis_Violation__c.copado__Score__c</summarizedField>
        <summaryForeignKey>copado__Static_Code_Analysis_Violation__c.copado__Static_Code_Analysis_Result__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>copado__User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Static Code Analysis Results</relationshipLabel>
        <relationshipName>Static_Code_Analysis_Results</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>